--- a/package.json
+++ b/package.json
@@ -52,14 +52,14 @@
     "@types/nprogress": "0.2.0",
     "@types/office-js": "1.0.177",
     "@types/office-runtime": "1.0.20",
-    "@types/react": "16.14.6",
+    "@types/react": "17.0.50",
     "@types/react-beautiful-dnd": "13.0.0",
     "@types/react-beforeunload": "2.1.0",
     "@types/react-bootstrap": "0.32.25",
     "@types/react-bootstrap-typeahead": "3.4.6",
     "@types/react-css-modules": "4.6.2",
     "@types/react-datepicker": "2.11.1",
-    "@types/react-dom": "16.9.12",
+    "@types/react-dom": "17.0.17",
     "@types/react-helmet": "6.1.0",
     "@types/react-responsive": "8.0.5",
     "@types/react-router-bootstrap": "0.24.5",
@@ -130,19 +130,16 @@
     "postcss-scss": "4.0.0",
     "prism-react-renderer": "1.2.1",
     "query-string": "7.0.1",
-    "react": "16.13.1",
+    "react": "17.0.2",
     "react-avatar": "3.10.0",
     "react-beautiful-dnd": "13.1.0",
-    "react-beautiful-dnd-test-utils": "3.2.1",
     "react-beforeunload": "2.5.1",
     "react-bootstrap": "0.33.1",
     "react-bootstrap-typeahead": "4.2.3",
-    "react-code-input": "3.10.1",
     "react-content-loader": "6.1.0",
     "react-datepicker": "3.8.0",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.2",
     "react-dropzone": "11.4.2",
-    "react-grid-system": "7.1.1",
     "react-helmet": "6.1.0",
     "react-paginate": "6.3.0",
     "react-phone-input-2": "2.14.0",
@@ -152,7 +149,6 @@
     "react-router-dom": "5.3.0",
     "react-router-hash-link": "2.0.0",
     "react-select": "4.3.1",
-    "react-test-renderer": "16.12.0",
     "react-toastify": "7.0.4",
     "react-transition-group": "4.3.0",
     "react-use": "17.3.2",
@@ -178,7 +174,7 @@
     "@cypress/code-coverage": "3.10.0",
     "@cypress/webpack-batteries-included-preprocessor": "2.2.3",
     "@cypress/webpack-preprocessor": "5.11.0",
-    "@storybook/addon-essentials": "6.5.13",
+    "@storybook/addon-docs": "^6.5.13",
     "@storybook/builder-webpack5": "6.5.13",
     "@storybook/manager-webpack5": "6.5.13",
     "@storybook/react": "6.5.13",
@@ -225,6 +221,7 @@
     "path-browserify": "1.0.1",
     "pdf-parse": "1.1.1",
     "prettier": "2.2.1",
+    "react-test-renderer": "17.0.2",
     "read-excel-file": "5.2.28",
     "require-from-string": "2.0.2",
     "testrail-api": "1.3.6",
@@ -232,14 +229,11 @@
     "xml2js": "0.4.23"
   },
   "resolutions": {
-    "@types/react": "16.14.6",
+    "@types/react": "17.0.17",
     "cross-fetch": "3.1.5",
     "minimist": "1.2.6",
     "prismjs": "1.28.0",
     "es-check/**/ansi-regex": "4.1.1"
   },
-  "browserslist": [
-    "defaults"
-  ],
   "license": "UNLICENSED"
 }
