--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["es6", "dom", "es2017", "es2019", "DOM.Iterable"],
-    "jsx": "react",
+    "jsx": "react-jsx",
     "module": "commonjs",
     "downlevelIteration": true,
     "noUnusedLocals": true,
